Actualizado Examen AJAX para poder usarse en pc personal y añadido Carpeta Api_Marvel

--- a/CURSO/DWEC/AJAX/Para_el_alumnado/Examen_DeptosProfesores.html
+++ b/CURSO/DWEC/AJAX/Para_el_alumnado/Examen_DeptosProfesores.html
@@ -47,7 +47,7 @@
 		}
 	</style>
 	<script type="text/javascript">
-		let urlServidor = 'deptosProfes.php';
+		let urlServidor = 'deptosProfesEXAMEN.php';
 		let objeto = new Object();
 		let peticion;
 
