--- a/CURSO/DWEC/JS_STORE/Ejemplo/index.html
+++ b/CURSO/DWEC/JS_STORE/Ejemplo/index.html
@@ -18,11 +18,11 @@
 
 	-->
 	
-	<script src="https://educacionadistancia.juntadeandalucia.es/centros/sevilla/pluginfile.php/924809/mod_folder/content/0/Ejemplo%20JsStore/jsstore/jsstore.min.js"></script>
-	<script src="https://educacionadistancia.juntadeandalucia.es/centros/sevilla/pluginfile.php/924809/mod_folder/content/0/Ejemplo%20JsStore/jsstore/jsstore.worker.min.js"></script>
+	<script src="jsstore/jsstore.min.js"></script>
+	<script src="jsstore/jsstore.worker.min.js"></script>
 	
 	
-	<script src="https://educacionadistancia.juntadeandalucia.es/centros/sevilla/pluginfile.php/924809/mod_folder/content/0/Ejemplo%20JsStore/BD.js"></script>
+	<script src="BD.js"></script>
 	
 	<script>
 		BD();
