Añadido código completo para poder crear la base de datos, además de añadir dos personas ininiciales a la tabla de la base de datos, y un método para eliminar dicha base de datos en caso de querer hacerlo

--- a/CURSO/DWEC/JS_STORE/Ejercicio1/index.html
+++ b/CURSO/DWEC/JS_STORE/Ejercicio1/index.html
@@ -8,6 +8,13 @@
     <!--Añadir las extensiones de jsstore a la cabecera con etiqueta script-->
     <script src="jsstore/jsstore.min.js"></script>
 	<script src="jsstore/jsstore.worker.min.js"></script>
+
+    <!--Llamar a BD.js para crear la base de datos-->
+    <script src="BD.js"></script>
+	
+	<script>
+		BD();
+	</script>
 </head>
 <body>
     
